Fixed the horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ main {
     justify-content: left;
     height: 60%;
     align-items: center;
-    width: 100%;
+    width: 90%;
     font-size: 2.5rem;
 }
 
@@ -125,9 +125,9 @@ main {
 
 
 .content {
-    flex-wrap:wrap;
+    
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 5rem;
 }
